# rust_wgpu_test

./: Cargo.toml
.cargo/: config
src/: app.rs  camera.rs  engine.rs  gui.rs  light.rs  main.rs  model.rs  pipeline.rs  scene.rs  texture.rs  uniforms.rs  vertex.rs  window.rs
src/shaders/: shader.frag  shader.vert
