[package]
name = "wgputest"
version = "0.1.0"
authors = ["Ricardo Ramos <rcdo.ramos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
env_logger = "0.7"
wgpu = "0.6.2"
futures = "0.3"
shaderc = "0.6"
bytemuck = { version = "1.4", features = [ "derive" ] }
image = "0.23.12"
anyhow = "1.0"
cgmath = "0.17"
tobj = "2.0.3"
imgui = "0.6.0"
imgui-wgpu = "0.12.0"
imgui-winit-support = "0.6.0"
